# ServerCocoSalvajeInventarios

./: .dockerignore  .env.example  .gitignore  AZURE_DEPLOYMENT.md  CoSal_Inventarios.pgerd  Dockerfile  README.md  build.sh  containerapp.yaml  deploy-azure.ps1  deploy.sh  docker-compose.development.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  load.sh  pyproject.toml  requirements.txt  reset_admin_pwd.py  ruff.toml  set_user.py  shopify_inventory_data.json  shopify_orders.json  test.py  use_case.pu
.agent/rules/: stack.md
.github/workflows/: inventarios-AutoDeployTrigger-c59a8b24-8b87-42d5-a8fb-ac2afc439097.yml
ansible/: inventory.yml  playbook.yml
app/: config.py  entrypoint.py  main.py
app/default_data/: data.json
app/internal/: README_LOGGING.md  log.py
app/internal/integrations/: addi.py  base.py  bing.py  gemini.py  shopify.py  shopify_world_office.py  world_office.py
app/internal/query/: base.py  inventario.py  transacciones.py  usuario.py
app/internal/timers/: base.py
app/models/: inventario.py  usuario.py
app/models/db/: inventario.py  session.py  transacciones.py  usuario.py
app/models/pydantic/: base.py
app/models/pydantic/addi/: transaccion.py
app/models/pydantic/facturacion/: invoice.py
app/models/pydantic/shopify/: inventario.py  order.py  payloads.py
app/routers/: auth.py  base.py  facturacion.py  inventario.py  oauth.py  search.py  transacciones.py  usuario.py
app/routers/ul/: facturacion.py  movimientos_inventario.py  ul_inventario.py
default_data/: seed.py
(+5 files in other folders)
